--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -109,7 +109,7 @@
                     { link: '/admin/products', icon: 'fas fa-box', text: 'Products' },
                     { link: '/admin/coupon', icon: 'fas fa-ticket-alt', text: 'Coupon' },
                     { link: '/admin/salesReport', icon: 'fas fa-image', text: 'Sales Report' },
-                    { link: '/admin/transaction', icon: 'fa fa-exchange', text: 'Transactions' },
+                    { link: '/admin/transactions', icon: 'fa fa-exchange', text: 'Transactions' },
                     { link: '/admin/orderList', icon: 'fas fa-shopping-cart', text: 'Orders' }
                 ]; %>
                 
