--- a/views/admin/customers.ejs
+++ b/views/admin/customers.ejs
@@ -144,7 +144,7 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
   function confirmBlock(event, userId) {
-    event.preventDefault(); // Prevent default link action
+    event.preventDefault();
     Swal.fire({
       title: "Are you sure?",
       text: "You are about to block this user!",
